form input 加上 input-width 值

--- a/app/styles/bootstrap/index.css
+++ b/app/styles/bootstrap/index.css
@@ -10493,6 +10493,14 @@ html, body {
     width: 300px;
 }
 
+.width350 {
+    width: 350px;
+}
+
+.width400 {
+    width: 400px;
+}
+
 .width500 {
     width: 500px;
 }
