--- a/app/scripts/views/biz/act/distribution.html
+++ b/app/scripts/views/biz/act/distribution.html
@@ -2,7 +2,7 @@
     <div class="panel panel-primary">
         <div class="panel-body">
 
-            <div form-input content-width="4" text="标题" ng-model="param.title" ng-disabled="true"></div>
+            <div form-input text="标题" ng-model="param.title" ng-disabled="true"></div>
 
             <div form-radio text="是否开启分销" ng-model="param.open_state" required="true" default="2"
                  source="[{text:'是',value:'2'},{text:'否',value:'1'}]" source-api=""></div>
@@ -10,17 +10,17 @@
             <div form-date-time text="开启分销时间" ng-model="param.open_time" required="true"></div>
 
             <h4 class="col-sm-offset-2 col-sm-10 text-primary">以下填写比例都是整数，例如: 填写数字 10 指 10%;</h4>
-            <div form-input content-width="4" text="团内一级（成团前）" ng-model="param.groupbuy_in_level_one" required="true" type="number" min="0" max="100"></div>
+            <div form-input text="团内一级（成团前）" ng-model="param.groupbuy_in_level_one" required="true" type="number" min="0" max="100"></div>
 
-            <div form-input content-width="4" text="团内二级" ng-model="param.groupbuy_in_level_two" required="true" type="number" min="0" max="100"></div>
+            <div form-input text="团内二级" ng-model="param.groupbuy_in_level_two" required="true" type="number" min="0" max="100"></div>
 
-            <div form-input content-width="4" text="团内弹性团一级（成团后）" ng-model="param.groupbuy_elastic_level_one" required="true" type="number" min="0" max="100"></div>
+            <div form-input text="团内弹性团一级（成团后）" ng-model="param.groupbuy_elastic_level_one" required="true" type="number" min="0" max="100"></div>
 
-            <div form-input content-width="4" text="弹性团二级" ng-model="param.groupbuy_elastic_level_two" required="true" type="number" min="0" max="100"></div>
+            <div form-input text="弹性团二级" ng-model="param.groupbuy_elastic_level_two" required="true" type="number" min="0" max="100"></div>
 
-            <div form-input content-width="4" text="团外一级" ng-model="param.poster_level_one" required="true" type="number" min="0" max="100" type="number" min="0" max="100"></div>
+            <div form-input text="团外一级" ng-model="param.poster_level_one" required="true" type="number" min="0" max="100" type="number" min="0" max="100"></div>
 
-            <div form-input content-width="4" text="团外二级" ng-model="param.poster_level_two" required="true" type="number" min="0" max="100"></div>
+            <div form-input text="团外二级" ng-model="param.poster_level_two" required="true" type="number" min="0" max="100"></div>
 
             <div form-radio text="课程详情页是否显示分销海报" ng-model="param.open_product_poster" required="true" default="2"
                  source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api="" ng-disabled="param.open_state==1"></div>
